fix: mapper와 response 기능 구분